@@ -11,3 +11,12 @@ With the slider regulations
 ![](IMG2.PNG) 
 
 With the textField regulations
+
+---
+
+## Software:
+JavaFX SDK 11.0.2 ( https://openjfx.io/)
+Scene Builder 11.0.0 (https://gluonhq.com/products/scene-builder/)
+IntelliJ IDEA ( https://www.jetbrains.com/idea/)
+
+For VM options :--module-path ${PATH_TO_JAVAFX} --add-modules javafx.controls,javafx.fxml ;${PATH_TO_JAVAFX} - path to JavaFX library 
